--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "just-tech-news",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/mhowitz/just-tech-news/issues"
   },
-  "homepage": "https://github.com/mhowitz/just-tech-news#readme"
+  "homepage": "https://github.com/mhowitz/just-tech-news#readme",
+  "dependencies": {
+    "dotenv": "^14.2.0",
+    "express": "^4.17.2",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.13.0"
+  }
 }
